--- a/NikAmooz.UrlShortener.Infrastructure/NikAmooz.UrlShortener.Infrastructure.csproj
+++ b/NikAmooz.UrlShortener.Infrastructure/NikAmooz.UrlShortener.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NikAmooz.UrlShortener.Application\NikAmooz.UrlShortener.Application.csproj" />
+    <ProjectReference Include="..\NikAmooz.UrlShortener.Domain\NikAmooz.UrlShortener.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
