--- a/NikAmooz.UrlShortener.Application/NikAmooz.UrlShortener.Application.csproj
+++ b/NikAmooz.UrlShortener.Application/NikAmooz.UrlShortener.Application.csproj
@@ -1,16 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NikAmooz.UrlShortener.Domain\NikAmooz.UrlShortener.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ShortUrls\Queries\" />
   </ItemGroup>
 
 </Project>
