--- a/NikAmooz.UrlShortener.Api/appsettings.Development.json
+++ b/NikAmooz.UrlShortener.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQL2019;Database=NikAmooz_ShortUrlDb;User Id=sa;Password=123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
