--- a/NikAmooz.UrlShortener.Api/NikAmooz.UrlShortener.Api.csproj
+++ b/NikAmooz.UrlShortener.Api/NikAmooz.UrlShortener.Api.csproj
@@ -6,16 +6,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.16">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NikAmooz.UrlShortener.Application\NikAmooz.UrlShortener.Application.csproj" />
     <ProjectReference Include="..\NikAmooz.UrlShortener.Infrastructure\NikAmooz.UrlShortener.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
