--- a/NikAmooz.UrlShortener.Application/NikAmooz.UrlShortener.Application.csproj
+++ b/NikAmooz.UrlShortener.Application/NikAmooz.UrlShortener.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.16" />
   </ItemGroup>
 
